src/test/ui/derives/derive-assoc-type-not-impl.stderr
error[E0599]: no method named `clone` found for struct `Bar<NotClone>` in the current scope
  --> $DIR/derive-assoc-type-not-impl.rs:18:30
   |
LL | struct Bar<T: Foo> {
   | ------------------
   | |
   | method `clone` not found for this
   | doesn't satisfy `Bar<NotClone>: Clone`
...
LL | struct NotClone;
   | ---------------- doesn't satisfy `NotClone: Clone`
...
LL |     Bar::<NotClone> { x: 1 }.clone();
   |                              ^^^^^ method not found in `Bar<NotClone>`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `Arc<Bar<NotClone>>` here
   |        the method is available for `Rc<Bar<NotClone>>` here
   |
   = note: the method `clone` exists but the following trait bounds were not satisfied:
           `NotClone: Clone`
           which is required by `Bar<NotClone>: Clone`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
